# mico_common

./: README.md
mico_common/: CMakeLists.txt  package.xml
mico_description/robots/: mico_arm_3fg_rb1.urdf.xacro
mico_description/urdf/arms/: mico_arm.urdf.xacro  mico_arm_3fg.urdf.xacro  mico_arm_rb1.gazebo.xacro
mico_moveit_config/: .setup_assistant
mico_moveit_config/config/: controllers.yaml  joint_limits.yaml  mico.srdf
mico_moveit_config/launch/: demo_fjt.launch  mico_moveit_controller_manager.launch  move_group.launch  moveit.rviz  planning_context.launch
mico_pad/: CMakeLists.txt  package.xml
mico_pad/launch/: mico_pad.launch  ps3.yaml
mico_pad/src/: mico_pad.cpp
